--- a/PrismEngine/PrismEngine.vcxproj.filters
+++ b/PrismEngine/PrismEngine.vcxproj.filters
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="PrismEngine">
       <UniqueIdentifier>{A6A834BD-125E-ADB2-9B52-A7890707A4B6}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\PrismEngine.h" />
     <ClInclude Include="src\PrismEngine\Application.h">
       <Filter>PrismEngine</Filter>
@@ -34,9 +43,15 @@
     <ClInclude Include="src\PrismEngine\Log.h">
       <Filter>PrismEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\PrismEngine\Window.h">
+      <Filter>PrismEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\pepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\PrismEngine\Application.cpp">
       <Filter>PrismEngine</Filter>
     </ClCompile>
