--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -3,18 +3,35 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Test]
+Pos=976,175
+Size=170,70
+Collapsed=0
+
 [Window][ImGui Demo]
-Pos=574,11
-Size=550,680
+Pos=525,16
+Size=275,325
+Collapsed=0
+
+[Window][Test2]
+Pos=100,262
+Size=99,48
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Console]
-Pos=90,95
+ViewportPos=296,310
+ViewportId=0x46B5E99C
 Size=520,600
 Collapsed=0
 
-[Window][Example: Log]
-Pos=155,133
-Size=500,400
+[Window][Settings]
+Pos=503,119
+Size=296,68
 Collapsed=0
+
+[Docking][Data]
 
